fixed links alignment and logo

--- a/less/header.css
+++ b/less/header.css
@@ -24,9 +24,9 @@
 
 .headerLinksText{
   display: inline-block;
-  margin-left: 38px;
+  margin-left: 35px;
   font-weight: bold;
-  margin-top: 15px;
+  margin-top: 13px;
   font-family: 'Acumin-Pro-Extra-Condensed-Regular';
   font-size: 20px;
 }
